--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,3 +1,8 @@
+/* Layout
+   =========================*/
+
+// allow enough space for move
+// and menu icons in ediitng mode
 .editing {
   aside {
     .block {
@@ -12,8 +17,8 @@
 
 aside {
   section.block {
-    padding: 0 12px 12px 12px;
-    margin-bottom: 12px !important;
+    padding: 0;
+    margin-bottom: $component-margin-bottom !important;
     &.hide {
       display: none;
     }
@@ -65,7 +70,8 @@ aside {
     }
   }
 }
-#block-region-side-pre .block, #block-region-side-post .block {
+#block-region-side-pre .block,
+#block-region-side-post .block {
   &:not(.block_fake) .title h2::after {
     content: '\f068';
     font-family: 'Font Awesome 5 Free';
@@ -120,23 +126,27 @@ aside {
      }
      ul {
        &.fa-ul {
-         margin: 0 0 0 2rem;
+         margin: 0 0 0 $component-margin-lg;
          .fa-li {
            top: 0;
-           left: -2.25rem;
+           left: -$component-margin-lg;
          }
        }
        li {
          font-family: 'KingsBureauGrotFiveOne';
          margin: 0;
-         a, p, span {
+         a,
+         p,
+         span {
            font-family: 'KingsBureauGrotFiveOne';
            color: $midnight-blue;
            font-size: 1rem;
            line-height: 1.5;
            margin: 0;
          }
-         strong, a:hover, p:hover {
+         strong,
+         a:hover,
+         p:hover {
            color: $link-hover;
          }
        }
@@ -146,8 +156,6 @@ aside {
   &.block_book_toc {
     .content {
       li {
-        // list item height not flexing in IE
-        -ms-flex: 0 1 auto;
         &:not(:last-child) {
           margin-bottom: 0.75rem;
         }
@@ -194,7 +202,7 @@ aside {
     margin: 0;
     list-style: none;
     li {
-      & img,
+      & > img,
       & > span > img,
       .profile-img {
         width: 3rem;
@@ -220,7 +228,26 @@ aside {
   }
 }
 
-//quick access block
+// networking html block
+#block-region-side-pre, #block-region-side-post {
+  // networking-block- class is added with JS
+  .block_html[class*="networking-block-"] {
+    &.networking-block-kbs {
+      .card-title {
+        background-color: darken($teal-blue, 10%) !important;
+        color: $white;
+      }
+      // increase contrast against icons by changing background colour around
+      // them
+      .action-menu-item,
+      .action-menu-trigger {
+        background-color: $block-background;
+      }
+    }
+  }
+}
+
+// quick access block
 #block-region-side-pre, #block-region-side-post {
   .block_html .content ul.fa-ul {
     color: $midnight-blue;
@@ -243,7 +270,7 @@ aside {
   }
 }
 
-// calendar
+// calendar block
 .calendarwrapper {
   margin-bottom: 1.5rem !important;
   margin-top: 0 !important;
