--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,6 +1,5 @@
-// -----------------------------------------------------------------------------
-// button
-// -----------------------------------------------------------------------------
+/* Button
+   ======================== */
 
 // standard button
 button, .btn {
@@ -100,7 +99,6 @@ input[type="submit"] {
   }
 }
 
-
 // override white visited button text
 button a.btn-secondary:visited, .btn a.btn-secondary:visited, a.btn.btn-secondary:visited {
   color: $midnight-blue !important;
@@ -108,6 +106,32 @@ button a.btn-secondary:visited, .btn a.btn-secondary:visited, a.btn.btn-secondar
 
 .btn#id_cancel {
  @extend .btn-secondary;
+}
+
+// download button container
+// download link in base/_typography
+.download-container {
+  .btn-download::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: 0.375rem;
+    content: '\f019';
+  }
+  .download-info {
+    font-size: 0.833rem;
+    color: $slate-grey;
+  }
+}
+
+// go to forum button
+.btn-forum{
+  margin-bottom: $component-margin-bottom-lg!important;
+  &::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: $component-margin-xs;
+    content: '\f500';
+  }
 }
 
 // 3.9 button groups are all in separate spans
