--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,6 +1,5 @@
-// -----------------------------------------------------------------------------
-// card
-// -----------------------------------------------------------------------------
+/* Card
+   ======================== */
 
 .card {
   display: flex;
@@ -10,10 +9,9 @@
   flex-direction: row;
   border: none;
   margin-bottom: $component-margin-bottom;
-  & > img, .card-img-top, .card-img-left, .img-top, .img-left,
+  & > img,
   .filter-ally-wrapper > img {
     width: 310px;
-    height: 100%;
     flex-shrink: 0;
     border-radius: 0; 
     @media only screen and (max-width: $neo-breakpoint) {
@@ -22,6 +20,9 @@
     &.img-right, .card-img-right {
       order: 2;
     }
+  }
+  & > img {
+    height: 100%;
   }
   &.img-right {
     & > img,
@@ -32,8 +33,14 @@
   .card-body {
     background-color: $block-background;
     width: 100%;
-    h4 {
-      margin-top: 0;
+    .card-title,
+    h3, h4, h5, h6 {
+      // from typography
+      @extend .h4;
+      margin-bottom: 0.75rem;
+    }
+    .card-subheading {
+      @extend .h5;
       margin-bottom: 0.75rem;
     }
     & > :last-child {
@@ -68,6 +75,7 @@
 
 .float-box {
   display: flex;
+  justify-content: space-between;
   align-items: flex-start;
   margin-bottom: $component-margin-bottom;
   &.img-right .filter-ally-wrapper,
@@ -125,16 +133,14 @@
   }
   .img-container {
     margin-right: $component-margin-sm;
+    width: max-content;
     .caption {
       margin-top: $component-margin-xs;
     }
   }
   & > div,
   .float-box-body {
-    h3, h4, h5 {
-      @extend .h4;
-      margin-bottom: 0.75rem;
-    }
+    width: 100%;
     & > :last-child {
       margin-bottom: 0;
     }
