--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,15 +1,14 @@
-// -----------------------------------------------------------------------------
-// colors
-// -----------------------------------------------------------------------------
+// Variables
+// =========
 
-//King's Colours
+// Colours
 
-//Primary
+// Primary
 $kings-red: #E2231A;
 $white: #FFFFFF;
 $black:#000000;
 
-//Secondary
+// Secondary
 $yellow: #F5B90F;
 $orange: #FF5F05;
 $soft-pink: #FC5E72;
@@ -22,12 +21,11 @@ $sky-blue: #00B9E1;
 $teal-blue: #009EA0;
 $pea-green: #28C382;
 $lime-green: #C6E128;
-//$lime-green-2: #B4BD10;
 $lime-green-2: #999900;
 $reflex-blue: #002395;
 $midnight-blue: #0A2D50;
 
-//Neutrals
+// Neutrals
 $pebble: #5F5550;
 $stone: #575756;
 $slate-grey: #5A6469;
@@ -36,7 +34,7 @@ $pearl-grey: #CDD7DC;
 $warm-grey: #BCAFA8;
 $powder-blue: #8D9EBC;
 
-//KC Custom
+// KC Custom
 $link-hover: #536C84;
 $headings: #171717;
 $body-text: #333333;
@@ -44,256 +42,26 @@ $footer-dark: #464E52;
 $rules-and-outlines: #8B9296;
 $block-header: #DCE3E6;
 $block-background: #EDF1F2;
-//$block-background: #E2E4E5;
 $table-border: #8B9296;
+$activity-label-orange: #EB5600;
 
-$cb-colors: (
-  default: (
-    purple: #501491,
-    reflex-blue: #002395,
-    sea-blue: #005ad2,
-    teal-blue: #009ea0,
-    pea-green: #28c382,
-    lime-green-2: #999900,
-    yellow: #f5b90f,
-    orange: #ff5f05,
-    kings-red: #e2231a,
-    hot-pink: #c83296,
-    lilac: #9b82d2,
-    sky-blue: #00b9e1,
-    lime-green: #c6e128,
-    soft-pink: #fc5e72,
-    midnight-blue: #0a2d50,
-    slate-grey: #5a6469,
-    stone: #575756,
-    pebble: #5f5550,
-    powder-blue: #8d9ebc,
-    pearl-grey: #cdd7dc,
-    mushroom: #cdc3b9,
-    warm-grey: #bcafa8,
-    black: #000000,
-    white: #ffffff
-  ),
-  a: (
-    purple: #343434,
-    reflex-blue: #262626,
-    sea-blue: #4d4d4d,
-    teal-blue: #6f6f6f,
-    pea-green: #8d8d8d,
-    lime-green-2: #888888,
-    yellow: #b8b8b8,
-    orange: #858585,
-    kings-red: #5b5b5b,
-    hot-pink: #6a6a6a,
-    lilac: #939393,
-    sky-blue: #868686,
-    lime-green: #c4c4c4,
-    soft-pink: #909090,
-    midnight-blue: #272727,
-    slate-grey: #626262,
-    stone: #575756,
-    pebble: #575757,
-    powder-blue: #9c9c9c,
-    pearl-grey: #d5d5d5,
-    mushroom: #c5c5c5,
-    warm-grey: #b2b2b2,
-    black: #000000,
-    white: #ffffff
-  ),
-  b: (
-    purple:  #3a2e47,
-    reflex-blue: #1e253c,
-    sea-blue: #3e5068,
-    teal-blue: #597879,
-    pea-green: #79988b,
-    lime-green-2: #8b8b6d,
-    yellow: #c4b896,
-    orange: #9d7d6b,
-    kings-red: #76504e,
-    hot-pink: #7d5f73,
-    lilac: #9590a0,
-    sky-blue: #6b9098,
-    lime-green: #c4caa5,
-    soft-pink: #a6868a,
-    midnight-blue: #21282f,
-    slate-grey: #606263,
-    stone: #575757,
-    pebble: #595756,
-    powder-blue: #999ca2,
-    pearl-grey: #d3d5d6,
-    mushroom: #c7c5c3,
-    warm-grey: #b4b1b0,
-    black: #000000,
-    white: #ffffff
-  ),
-  c: (
-    purple: #004281,
-    reflex-blue: #003c75,
-    sea-blue: #0066c7,
-    teal-blue: #93929b,
-    pea-green: #bdaf7f,
-    lime-green-2: #ac9900,
-    yellow: #ddc51e,
-    orange: #ab9921,
-    kings-red: #887b36,
-    hot-pink: #5876c0,
-    lilac: #7892db,
-    sky-blue: #a2acd7,
-    lime-green: #f0d630,
-    soft-pink: #9f998f,
-    midnight-blue: #273557,
-    slate-grey: #6a696f,
-    stone: #615f5e,
-    pebble: #625f59,
-    powder-blue: #9ba0be,
-    pearl-grey: #d9d6dc,
-    mushroom: #cdc6bc,
-    warm-grey: #bab4ad,
-    black: #000000,
-    white: #fffffe
-  ),
-  d: (
-    purple: #004670,
-    reflex-blue: #003f65,
-    sea-blue: #006bae,
-    teal-blue: #9590ab,
-    pea-green: #caa992,
-    lime-green-2: #bf921c,
-    yellow: #f7bb1c,
-    orange: #bf9200,
-    kings-red: #9a7500,
-    hot-pink: #79768e,
-    lilac: #7b94d0,
-    sky-blue: #9aace9,
-    lime-green: #ffce80,
-    soft-pink: #b6946f,
-    midnight-blue: #1a3759,
-    slate-grey: #706772,
-    stone: #685c5f,
-    pebble: #6a5c59,
-    powder-blue: #a19ec0,
-    pearl-grey: #e7d1e0,
-    mushroom: #ddc1be,
-    warm-grey: #c9afad,
-    black: #000000,
-    white: #fefffe
-  ),
-  e: (
-    purple:  #424449,
-    reflex-blue: #004447,
-    sea-blue: #007379,
-    teal-blue: #22a1ad,
-    pea-green: #5abdcb,
-    lime-green-2: #a9939e,
-    yellow: #feb0bc,
-    orange: #ff6267,
-    kings-red: #e32d2c,
-    hot-pink: #c45257,
-    lilac: #94949e,
-    sky-blue: #00bfcc,
-    lime-green: #dad3e2,
-    soft-pink: #fb686e,
-    midnight-blue: #003c40,
-    slate-grey: #636b73,
-    stone: #605e65,
-    pebble: #685c62,
-    powder-blue: #8fa5b1,
-    pearl-grey: #d1d7e7,
-    mushroom: #d2c2d0,
-    warm-grey: #c2b0bd,
-    black: #000000,
-    white: #feffff
-  ),
-  f: (
-    purple: #1d3186,
-    reflex-blue: #003380,
-    sea-blue: #0061cb,
-    teal-blue: #5e969d,
-    pea-green: #87b680,
-    lime-green-2: #a59900,
-    yellow: #e6c119,
-    orange: #c98416,
-    kings-red: #a95b2c,
-    hot-pink: #805db0,
-    lilac: #858cd8,
-    sky-blue: #67b1db,
-    lime-green: #e0da2d,
-    soft-pink: #c18384,
-    midnight-blue: #1d3254,
-    slate-grey: #64676d,
-    stone: #5d5c5b,
-    pebble: #615b56,
-    powder-blue: #969fbd,
-    pearl-grey: #d4d6dc,
-    mushroom: #cdc5bb,
-    warm-grey: #bbb2ab,
-    black: #000000,
-    white: #fffffe
-  ),
-  g: (
-    purple: #1d337c,
-    reflex-blue: #003576,
-    sea-blue: #0065bb,
-    teal-blue: #5e95a7,
-    pea-green: #8fb28c,
-    lime-green-2: #b19412,
-    yellow: #f6ba17,
-    orange: #d67f01,
-    kings-red: #b45709,
-    hot-pink: #955d91,
-    lilac: #878dd0,
-    sky-blue: #62b0e6,
-    lime-green: #ead560,
-    soft-pink: #cf8070,
-    midnight-blue: #143355,
-    slate-grey: #68666e,
-    stone: #625a5c,
-    pebble: #665956,
-    powder-blue: #999ebf,
-    pearl-grey: #ddd3de,
-    mushroom: #d7c1bc,
-    warm-grey: #c4afab,
-    black: #000000,
-    white: #fefffe
-  ),
-  h: (
-    purple: #473263,
-    reflex-blue: #003863,
-    sea-blue: #006a99,
-    teal-blue: #15a0a8,
-    pea-green: #48bfb0,
-    lime-green-2: #a39564,
-    yellow: #fbb37d,
-    orange: #ff6143,
-    kings-red: #e32925,
-    hot-pink: #c6466e,
-    lilac: #968db1,
-    sky-blue: #00bdd4,
-    lime-green: #d3d89e,
-    soft-pink: #fb646f,
-    midnight-blue: #033646,
-    slate-grey: #5f686f,
-    stone: #5d5b5f,
-    pebble: #65595c,
-    powder-blue: #8ea2b5,
-    pearl-grey: #cfd7e3,
-    mushroom: #d0c2c8,
-    warm-grey: #bfb0b5,
-    black: #000000,
-    white: #feffff
-  )
-);
+// converts hex to rgba with custom opacity
+@mixin colour-opacity($color, $opacity) {
+  color: rgba($color, $opacity) !important;
+}
+@mixin bg-colour-opacity($color, $opacity) {
+  background-color: rgba($color, $opacity) !important;
+}
 
-// -----------------------------------------------------------------------------
-// layout
-// -----------------------------------------------------------------------------
+// Layout
 
-//breakpoints
+// Breakpoints
+$xxl-breakpoint: 1400px;
 $xl-breakpoint: 1200px;
 $lg-breakpoint: 979px;
 $neo-breakpoint: 768px;
 
-//spacing
+// Spacing
 $component-margin-xs: 0.5rem;
 $component-margin-sm: 1rem;
 $component-margin: 1.5rem;
@@ -304,7 +72,14 @@ $component-margin-bottom-sm: $component-margin-sm;
 $component-margin-bottom: $component-margin;
 $component-margin-bottom-lg: $component-margin-lg;
 $component-margin-bottom-xl: $component-margin-xl;
+$component-padding-xs: $component-margin-xs;
+$component-padding-sm: $component-margin-sm;
+$component-padding-: $component-margin;
+$component-padding-lg: $component-margin-lg;
+$component-padding-xl: $component-margin-xl;
+$section-margin-bottom-sm: 3rem;
+$section-margin-bottom: 4rem;
 
-//nav button margins
+// Nav button margins
 $lg-nav-margin: 3rem;
 $sm-nav-margin: 3rem;
